{
    "name": "New Controls",
    "maps": [
        {
            "name": "MouseInput",
            "id": "eaa702b1-69d2-4c4f-8dd2-35cb2c7e8838",
            "actions": [
                {
                    "name": "MouseX",
                    "type": "PassThrough",
                    "id": "8170be72-d740-4775-ba0e-5f49f7eb7404",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseY",
                    "type": "PassThrough",
                    "id": "e719a24a-f4d8-48c1-ad49-e7c3905b8304",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseWheelUp",
                    "type": "PassThrough",
                    "id": "a4c083bd-f5e3-4b9a-8633-18254d69073b",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseWheelDown",
                    "type": "PassThrough",
                    "id": "1c5fd011-baa9-4568-a66f-9a65f5deea81",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "21825246-6ec6-42e4-8a82-15608daebbe9",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "39b219f0-cb02-4c1b-ad03-115d3d4281de",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "Inputs",
                    "action": "MouseY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "973d44ed-573a-42a5-a991-0afe0b28b51e",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "Inputs",
                    "action": "MouseWheelUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "17855f03-e6c4-441e-97f3-f27296441519",
                    "path": "<Mouse>/scroll/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "Inputs",
                    "action": "MouseWheelDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Inputs",
            "bindingGroup": "Inputs",
            "devices": [
                {
                    "devicePath": "<VirtualMouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}